Added popup logic / some refactoring done

--- a/frontend/src/pages/index.css
+++ b/frontend/src/pages/index.css
@@ -4,6 +4,14 @@
 
 @import url(../blocks/content/content.css);
 
+@import url(../blocks/overlay/overlay.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_state/popup_state_show.css);
+@import url(../blocks/popup/_state/popup_state_hide.css);
+@import url(../blocks/popup/__header/popup__header.css);
+@import url(../blocks/popup/__text/popup__text.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__pic/header__pic.css);
 @import url(../blocks/header/__user-container/header__user-container.css);
@@ -25,5 +33,3 @@
 @import url(../blocks/wheel/__sector-text/wheel__sector-text.css);
 
 @import url(../blocks/game/game.css);
-
-@import url(../blocks/overlay/overlay.css);
