--- a/frontend/src/blocks/content/content.css
+++ b/frontend/src/blocks/content/content.css
@@ -1,6 +1,9 @@
 .content {
   margin: 0;
   height: 100vh;
+  display: flex;
+
+  flex-direction: column;
 
   font-family: Montserrat, sans-serif;
   color: #fff;
